comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam expedita porro facilis harum libero dolorum doloremque placeat ea architecto minima, beatae exercitationem reprehenderit dolore nisi, tempore iste. Perferendis, itaque aperiam!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScrip</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolorum aperiam repellendus ex at maiores quia explicabo delectus sunt ab, aut earum quos architecto doloremque, et ullam est voluptas obcaecati?</p>
         </article>
     </main>
 </body>
