--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, harum! Non illum animi ipsum placeat velit nulla, accusantium aspernatur, nisi eius, fugit quo! Quae ut id, unde magni esse ipsa.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam placeat molestiae odio. Eaque delectus voluptatibus aspernatur animi quod sed aperiam, debitis distinctio provident incidunt quas, itaque voluptatem dignissimos? Delectus, ullam!</p>
         </article>
     </main>
 </body>
