--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam expedita porro facilis harum libero dolorum doloremque placeat ea architecto minima, beatae exercitationem reprehenderit dolore nisi, tempore iste. Perferendis, itaque aperiam!</p>
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter</p>
         </article>
         <article>
             <h2>Curso de JavaScrip</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolorum aperiam repellendus ex at maiores quia explicabo delectus sunt ab, aut earum quos architecto doloremque, et ullam est voluptas obcaecati?</p>
+            <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM</p>
         </article>
     </main>
 </body>
